# space_odyssey

./: CMakeLists.txt  README.md  enemy.cpp
SDL2/: SDL2.spec  SDL_config.h.intermediate  cmake_install.cmake  cmake_uninstall.cmake  sdl2-config  sdl2.pc
SDL2/include/SDL2/: SDL_revision.h
SDL2_image/: cmake_install.cmake
SDL2_ttf/: REVISION.txt  version.rc
SDL2_ttf/VisualC/: SDL_ttf.vcxproj  Version.rc
asset/: tree.txt
src/: Globals.h  assets.cpp  assets.h  collision.cpp  collision.h  enemy.cpp  enemy.h  game.cpp  game.h  globals.cpp  main.cpp  player.cpp  player.h  render.cpp  render.h  types.h  update.cpp  update.h  weapon.cpp  weapon.h
